changed the max-width to avoid distortion on larger screens

--- a/control/src/component-styles/HeaderStyle.module.css
+++ b/control/src/component-styles/HeaderStyle.module.css
@@ -10,7 +10,8 @@
 .navbar {
   padding: 0.5rem 1rem;
   background-color: white;
-  max-width: 95%;
+  max-width: 1440px;
+  width: 95%;
   margin: 0 auto;
   position: relative;
 }
